# src/main/java/hu/webuni/cst/kamarasd/model/Course.java
@@ -2,12 +2,7 @@ package hu.webuni.cst.kamarasd.model;
 
 import java.util.Set;
 
-import javax.persistence.Entity;
-import javax.persistence.GeneratedValue;
-import javax.persistence.Id;
-import javax.persistence.ManyToMany;
-import javax.persistence.NamedAttributeNode;
-import javax.persistence.NamedEntityGraph;
+import javax.persistence.*;
 
 import org.hibernate.envers.Audited;
 
@@ -29,6 +24,7 @@ import lombok.ToString;
 @Entity
 @NamedEntityGraph(name = "Course.students", attributeNodes = @NamedAttributeNode("students"))
 @NamedEntityGraph(name = "Course.teachers", attributeNodes = @NamedAttributeNode("teachers"))
+@NamedEntityGraph(name = "Course.timetables", attributeNodes = @NamedAttributeNode("timetables"))
 @Audited
 public class Course {
 
@@ -45,4 +41,8 @@ public class Course {
 	
 	@ManyToMany
 	private Set<Teacher> teachers;
+
+	@ManyToMany
+	private Set<Timetable> timetables;
+
 }
