# src/main/openapi/cst-openapi.yml
@@ -215,24 +215,17 @@ paths:
                 format: binary
       operationId: getStudentPicture
       description: ''
+  '/api/timetable/{id}':
+    parameters:
+      - schema:
+          type: string
+        name: id
+        in: path
+        required: true
 components:
   schemas:
     CourseDto:
       type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        name:
-          type: string
-        students:
-          type: array
-          items:
-            $ref: '#/components/schemas/StudentDto'
-        teachers:
-          type: array
-          items:
-            $ref: '#/components/schemas/TeacherDto'
       x-examples:
         example-1:
           id: -9223372036854776000
@@ -248,6 +241,24 @@ components:
             - id: 0
               name: string
               birthdate: '2019-08-24'
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        students:
+          type: array
+          items:
+            $ref: '#/components/schemas/StudentDto'
+        teachers:
+          type: array
+          items:
+            $ref: '#/components/schemas/TeacherDto'
+        timetables:
+          type: array
+          items:
+            $ref: '#/components/schemas/TimetableDto'
     StudentDto:
       type: object
       properties:
@@ -324,3 +335,18 @@ components:
           type: boolean
         empty:
           type: boolean
+    TimetableDto:
+      title: TimetableDto
+      x-stoplight:
+        id: r9awkgbvqcmzj
+      type: object
+      description: ''
+      properties:
+        id:
+          type: integer
+        lessonDate:
+          type: string
+        lessonStart:
+          type: string
+        lessonEnd:
+          type: string
